--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,38 @@
   "name": "croacworks/yii2-essentials",
   "description": "Essential set for Yii2: authorization by FQCN/action, typed settings, file storage, UI alerts and MetaHelper.",
   "type": "yii2-extension",
+  "keywords": ["yii2","extension","basics"],
   "license": "BSD-3-Clause",
+  "homepage": "https://github.com/honaldcarvalho/yii2-essentials",
+  "authors": [
+    { "name": "weebz", "email": "suporte@weebz.com.br" }
+  ],
   "require": {
-    "php": ">=8.1",
-    "yiisoft/yii2": "~2.0.0",
-    "yiisoft/yii2-bootstrap5": "~2.0",
-    "yiisoft/yii2-imagine": "^2.3"
+    "php": ">=8.0.0",
+    "yiisoft/yii2": "dev-master#0749dca94af871c15f0cc4039dc25f2d2eb21dfb",
+    "yiisoft/yii2-bootstrap5": "dev-master#bd19a9d413a5778f09ec6f8e2fe8105cd4bf11d6",
+    "yiisoft/yii2-imagine": "2.3.1",
+    "yiisoft/yii2-httpclient": "dev-master#0b4de012b25efc4d05bcf1ac6721716f881b03a8",
+    "yiithings/yii2-dotenv": "dev-master#4a43ff88ad9eb1148ca597875ce4165816dc666d",
+    "weebz/yii2export": "dev-master#d85257fd333fb80f9e02491a60b2ee5004c650b9",
+    "kartik-v/yii2-widget-select2": "dev-master#958ba374af39fbc88f1fd11209b22efe1055d567",  
+    "kartik-v/yii2-bootstrap5-dropdown": "dev-master#459e4c06c64e49f89ac372ce7c2cabb961f56ec9",
+    "kartik-v/yii2-widget-datetimepicker": "dev-master#85b22d38553ca207f86be198f37e6531347e9a23",
+    "kartik-v/yii2-editors": "dev-master#529cff31afda936ac5c98d7f9c53bb01c4452419",
+    "phpseclib/phpseclib": "3.0.x-dev#56483a7de62a6c2a6635e42e93b8a9e25d4f0ec6",
+    "onmotion/yii2-widget-apexcharts": "1.0.9",
+    "php-ffmpeg/php-ffmpeg": "1.3.2",
+    "yiisoft/yii2-redis": "dev-master#efe038dd6637cc538715489a660504d4721a38a8",
+    "stichoza/google-translate-php": "5.3.0"
   },
   "autoload": {
     "psr-4": {
-      "croacworks\\\\essentials\\\\": "src/"
+      "croacworks\\essentials\\": "src"
     }
   },
-  "extra": {
-    "bootstrap": "croacworks\\essentials\\Bootstrap"
+  "config": {
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true
+    }
   }
 }
