--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,9 @@
       "croacworks\\essentials\\": "src"
     }
   },
+  "extra": {
+    "bootstrap": "croacworks\\essentials\\Bootstrap"
+  },
   "config": {
     "allow-plugins": {
       "yiisoft/yii2-composer": true
