--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "onmotion/yii2-widget-apexcharts": "1.0.9",
     "php-ffmpeg/php-ffmpeg": "1.3.2",
     "yiisoft/yii2-redis": "dev-master#efe038dd6637cc538715489a660504d4721a38a8",
-    "stichoza/google-translate-php": "5.3.0"
+    "stichoza/google-translate-php": "5.3.0",
+    "yiisoft/yii2-debug": "^2.1"
   },
   "autoload": {
     "psr-4": {
