--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,10 @@
     "php-ffmpeg/php-ffmpeg": "1.3.2",
     "yiisoft/yii2-redis": "dev-master#efe038dd6637cc538715489a660504d4721a38a8",
     "stichoza/google-translate-php": "5.3.0",
-    "yiisoft/yii2-debug": "^2.1"
+    "yiisoft/yii2-debug": "^2.1",
+    "yiisoft/yii2-gii": "~2.2.0"
   },
   "require-dev": {
-    "yiisoft/yii2-gii": "~2.2.0",
     "yiisoft/yii2-faker": "~2.0.0",
     "codeception/codeception": "^5.0.0 || ^4.0",
     "codeception/lib-innerbrowser": "^4.0 || ^3.0 || ^1.1",
