--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "stichoza/google-translate-php": "5.3.0",
     "yiisoft/yii2-debug": "^2.1",
     "yiisoft/yii2-gii": "~2.2.0",
-    "yiisoft/yii2-queue":"*"
+    "yiisoft/yii2-queue":"2.3.7"
   },
   "require-dev": {
     "yiisoft/yii2-faker": "~2.0.0",
