--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "yiisoft/yii2-debug": "^2.1",
     "yiisoft/yii2-gii": "~2.2.0",
     "yiisoft/yii2-queue":"2.3.7",
-    "knplabs/knp-snappy": "^1.5"
+    "spatie/browsershot": "^5.0"
   },
   "require-dev": {
     "yiisoft/yii2-faker": "~2.0.0",
